--- a/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,80 +64,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Avarua</td>\n",
-       "      <td>CK</td>\n",
-       "      <td>78.85</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>US</td>\n",
+       "      <td>85.64</td>\n",
        "      <td>overcast clouds</td>\n",
-       "      <td>-21.2078</td>\n",
-       "      <td>-159.7750</td>\n",
-       "      <td>Paradise Inn</td>\n",
+       "      <td>42.6001</td>\n",
+       "      <td>-73.9662</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Airai</td>\n",
-       "      <td>TL</td>\n",
-       "      <td>65.25</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>-8.9266</td>\n",
-       "      <td>125.4092</td>\n",
-       "      <td>Juvinal Martin</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Bandarbeyla</td>\n",
+       "      <td>SO</td>\n",
+       "      <td>80.19</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>9.4942</td>\n",
+       "      <td>50.8122</td>\n",
+       "      <td>JABIR HOTEL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Mananara</td>\n",
-       "      <td>MG</td>\n",
-       "      <td>69.33</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>-16.1667</td>\n",
-       "      <td>49.7667</td>\n",
-       "      <td>Chez Roger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Tam Ky</td>\n",
-       "      <td>VN</td>\n",
-       "      <td>80.58</td>\n",
-       "      <td>broken clouds</td>\n",
-       "      <td>15.5667</td>\n",
-       "      <td>108.4833</td>\n",
-       "      <td>Khách Sạn Đông Á</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>13</td>\n",
+       "      <td>7</td>\n",
        "      <td>Sao Filipe</td>\n",
        "      <td>CV</td>\n",
-       "      <td>72.61</td>\n",
+       "      <td>73.78</td>\n",
        "      <td>clear sky</td>\n",
        "      <td>14.8961</td>\n",
        "      <td>-24.4956</td>\n",
        "      <td>Hotel Xaguate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Butaritari</td>\n",
+       "      <td>KI</td>\n",
+       "      <td>83.05</td>\n",
+       "      <td>moderate rain</td>\n",
+       "      <td>3.0707</td>\n",
+       "      <td>172.7902</td>\n",
+       "      <td>Isles Sunset Lodge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Lisakovsk</td>\n",
+       "      <td>KZ</td>\n",
+       "      <td>72.82</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>52.5369</td>\n",
+       "      <td>62.4936</td>\n",
+       "      <td>Gostinitsa Lisakovsk</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
-       "0        3      Avarua      CK     78.85     overcast clouds -21.2078   \n",
-       "1        9       Airai      TL     65.25          light rain  -8.9266   \n",
-       "2       10    Mananara      MG     69.33          light rain -16.1667   \n",
-       "3       12      Tam Ky      VN     80.58       broken clouds  15.5667   \n",
-       "4       13  Sao Filipe      CV     72.61           clear sky  14.8961   \n",
+       "   City_ID         City Country  Max Temp Current Description      Lat  \\\n",
+       "0        1       Albany      US     85.64     overcast clouds  42.6001   \n",
+       "1        3  Bandarbeyla      SO     80.19       broken clouds   9.4942   \n",
+       "2        7   Sao Filipe      CV     73.78           clear sky  14.8961   \n",
+       "3        9   Butaritari      KI     83.05       moderate rain   3.0707   \n",
+       "4       10    Lisakovsk      KZ     72.82     overcast clouds  52.5369   \n",
        "\n",
-       "        Lng        Hotel Name  \n",
-       "0 -159.7750      Paradise Inn  \n",
-       "1  125.4092    Juvinal Martin  \n",
-       "2   49.7667        Chez Roger  \n",
-       "3  108.4833  Khách Sạn Đông Á  \n",
-       "4  -24.4956     Hotel Xaguate  "
+       "        Lng            Hotel Name  \n",
+       "0  -73.9662                   NaN  \n",
+       "1   50.8122           JABIR HOTEL  \n",
+       "2  -24.4956         Hotel Xaguate  \n",
+       "3  172.7902    Isles Sunset Lodge  \n",
+       "4   62.4936  Gostinitsa Lisakovsk  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60c48e73236743bd90a3380f483e0913",
+       "model_id": "cf887dfaf7ad4a51bd6a56b6963ccf40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,23 +210,23 @@
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Havelock\"]\n",
-    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Havelock\"]\n",
-    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Bolivar\"]\n",
-    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Griffith\"] \n",
-    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Amberley\"] "
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Wilmington\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Wilmington\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Charleston\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Rincon\"] \n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Russell\"] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start: (34.8791, -76.9013), End: (34.8791, -76.9013)\n"
+      "Start: (34.2257, -77.9447), End: (34.2257, -77.9447)\n"
      ]
     }
    ],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -255,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "feac29e3896b4818a8a0eb7826e673cd",
+       "model_id": "03e0ac206921403b94a74b733adfbe50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -318,80 +318,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>442</td>\n",
-       "      <td>Havelock</td>\n",
+       "      <td>269</td>\n",
+       "      <td>Wilmington</td>\n",
        "      <td>US</td>\n",
-       "      <td>76.98</td>\n",
+       "      <td>86.99</td>\n",
        "      <td>clear sky</td>\n",
-       "      <td>34.8791</td>\n",
-       "      <td>-76.9013</td>\n",
-       "      <td>Sherwood Motel</td>\n",
+       "      <td>34.2257</td>\n",
+       "      <td>-77.9447</td>\n",
+       "      <td>Hotel Ballast Wilmington, Tapestry Collection ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>82</td>\n",
-       "      <td>Bolivar</td>\n",
+       "      <td>201</td>\n",
+       "      <td>Charleston</td>\n",
        "      <td>US</td>\n",
-       "      <td>71.28</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>37.6145</td>\n",
-       "      <td>-93.4105</td>\n",
-       "      <td>Comfort Inn Bolivar</td>\n",
+       "      <td>86.02</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>32.7766</td>\n",
+       "      <td>-79.9309</td>\n",
+       "      <td>The Mills House Wyndham Grand Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>105</td>\n",
-       "      <td>Griffith</td>\n",
+       "      <td>209</td>\n",
+       "      <td>Rincon</td>\n",
        "      <td>US</td>\n",
-       "      <td>82.89</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>41.5284</td>\n",
-       "      <td>-87.4237</td>\n",
-       "      <td>Motel 6 Hammond, IN - Chicago Area</td>\n",
+       "      <td>84.38</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>32.2960</td>\n",
+       "      <td>-81.2354</td>\n",
+       "      <td>Days Inn Rincon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>514</td>\n",
-       "      <td>Amberley</td>\n",
+       "      <td>332</td>\n",
+       "      <td>Russell</td>\n",
        "      <td>US</td>\n",
-       "      <td>82.90</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>39.2048</td>\n",
-       "      <td>-84.4280</td>\n",
-       "      <td>Motel 6 Cincinnati, OH - Central - Norwood</td>\n",
+       "      <td>83.80</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>32.3502</td>\n",
+       "      <td>-85.1999</td>\n",
+       "      <td>Macs</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>442</td>\n",
-       "      <td>Havelock</td>\n",
+       "      <td>269</td>\n",
+       "      <td>Wilmington</td>\n",
        "      <td>US</td>\n",
-       "      <td>76.98</td>\n",
+       "      <td>86.99</td>\n",
        "      <td>clear sky</td>\n",
-       "      <td>34.8791</td>\n",
-       "      <td>-76.9013</td>\n",
-       "      <td>Sherwood Motel</td>\n",
+       "      <td>34.2257</td>\n",
+       "      <td>-77.9447</td>\n",
+       "      <td>Hotel Ballast Wilmington, Tapestry Collection ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID      City Country  Max Temp Current Description      Lat      Lng  \\\n",
-       "0      442  Havelock      US     76.98           clear sky  34.8791 -76.9013   \n",
-       "1       82   Bolivar      US     71.28          light rain  37.6145 -93.4105   \n",
-       "2      105  Griffith      US     82.89           clear sky  41.5284 -87.4237   \n",
-       "3      514  Amberley      US     82.90           clear sky  39.2048 -84.4280   \n",
-       "4      442  Havelock      US     76.98           clear sky  34.8791 -76.9013   \n",
+       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
+       "0      269  Wilmington      US     86.99           clear sky  34.2257   \n",
+       "1      201  Charleston      US     86.02           clear sky  32.7766   \n",
+       "2      209      Rincon      US     84.38       broken clouds  32.2960   \n",
+       "3      332     Russell      US     83.80    scattered clouds  32.3502   \n",
+       "4      269  Wilmington      US     86.99           clear sky  34.2257   \n",
        "\n",
-       "                                   Hotel Name  \n",
-       "0                              Sherwood Motel  \n",
-       "1                         Comfort Inn Bolivar  \n",
-       "2          Motel 6 Hammond, IN - Chicago Area  \n",
-       "3  Motel 6 Cincinnati, OH - Central - Norwood  \n",
-       "4                              Sherwood Motel  "
+       "       Lng                                         Hotel Name  \n",
+       "0 -77.9447  Hotel Ballast Wilmington, Tapestry Collection ...  \n",
+       "1 -79.9309                The Mills House Wyndham Grand Hotel  \n",
+       "2 -81.2354                                    Days Inn Rincon  \n",
+       "3 -85.1999                                               Macs  \n",
+       "4 -77.9447  Hotel Ballast Wilmington, Tapestry Collection ...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,13 +428,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39cdabd18915465db3e892187165675f",
+       "model_id": "d114c173a4cd4bfb93ecae31293eff65",
        "version_major": 2,
        "version_minor": 0
       },
